--- a/Exercises/01. Selectors/index.html
+++ b/Exercises/01. Selectors/index.html
@@ -77,6 +77,15 @@
 
     <p>PARAGRAPH NOT INSIDE A DIV</p>
 
+    <div>
+        <h3>We are going to try quoting here</h3>
+        <p>
+            In this text, we have some sections that need to be <span class="quoted">Surrounded by quotes</span>. 
+            These are lines that are taken from <span class="quoted">famous scriptures</span>, or just
+            require to be surrounded by quotes because it is <span class="quoted">simply pretty</span>.
+        </p>
+    </div>
+
 </body>
 
 </html>
