--- a/Modules/Module 01 - Selectors/fun-with-selectors/index.html
+++ b/Modules/Module 01 - Selectors/fun-with-selectors/index.html
@@ -45,6 +45,59 @@
         <pre>
             * - selects all the elements
         </pre>
+
+        <h2>Combinators</h2>
+        <div class="shopping-list">
+            <ul class="outer-ul">
+                <li class="a d">Item 1</li>
+                <li class="b">Item 2</li>
+                <li class="a b">Item 3</li>
+                <li>Item 4</li>
+                <li>
+                    Group 1
+                    <ul class="inner-ul">
+                        <li>Item 1 - 1</li>
+                        <li class="a c">Item 1 - 2</li>
+                        <li class="b a">Item 1 - 3</li>
+                        <li class="b">Item 1 - 4</li>
+                    </ul>    
+                </li>
+                
+            </ul>    
+        </div>
+
+        <h3>Descendant Combinator</h3>
+        <pre>
+            parent child - Select all "child" elements that are descendant of "parent"
+        </pre>
+
+        <h3>Direct Child Combinator</h3>
+        <pre>
+            parent > child - Select all "child" elements that are <strong>Direct Child</strong> of "parent"
+        </pre>
+
+        <h3>The "And" Combinator</h3>
+        <pre>
+            .parent.child - select all elements with class "parent" and also class "child"
+        </pre>
+
+        <h3>General Sibling Selector</h3>
+        <pre>
+            a ~ b - select all b elements that are preceded by a
+        </pre>
+
+        <h3>Direct Sibling Selector</h3>
+        <pre>
+            a + b - select the first b that is placed immediately after a
+        </pre>
+
+        <div class="ex1">
+            <h1>Hello Exercise 1</h1>
+            <h2>Title 2</h2>
+            <h1 class="special">yet another main header</h1>
+            <h2>Yet another title 2</h2>
+            <p>This is a paragraph</p>
+        </div>
         
     </body>
 </html>
