making room for material

--- a/Modules/07 - Animations/fun-with-graphics/index.html
+++ b/Modules/07 - Animations/fun-with-graphics/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fun with Graphics</title>
-    <link rel="stylesheet" href="assets/css/all.css">
+    <link rel="stylesheet" href="assets/font-awesome/css/all.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         This is a "far user": <span class="far fa-user"></span>
     </div>
     <div>
-        This is a "fal user": <span class="fal fa-user"></span>
+        This is a "far bell": <span class="far fa-bell"></span>
     </div>
     <div>
         This is a "fab github": <span class="fab fa-github-square"></span>
