--- a/Modules/07 - Animations/fun-with-graphics/index.html
+++ b/Modules/07 - Animations/fun-with-graphics/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Fun with Graphics</title>
     <link rel="stylesheet" href="assets/font-awesome/css/all.css">
+    <link rel="stylesheet" href="assets/material-icons/material-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div>
         This is a "fas user": <span class="fas fa-user"></span>
@@ -18,5 +21,17 @@
     <div>
         This is a "fab github": <span class="fab fa-github-square"></span>
     </div>
+    <div>
+        this is material "face": <span class="material-icons">face</span>
+    </div>
+    <div>
+        and several versions of donut_small:
+        <span class="material-icons">donut_small</span>
+        <span class="material-icons-outlined">donut_small</span>
+        <span class="material-icons-two-tone">donut_small</span>
+        <span class="material-icons-round">donut_small</span>
+        <span class="material-icons-sharp">donut_small</span>
+    </div>
 </body>
+
 </html>
