--- a/Modules/07 - Animations/fun-with-graphics/index.html
+++ b/Modules/07 - Animations/fun-with-graphics/index.html
@@ -32,6 +32,9 @@
         <span class="material-icons-round">donut_small</span>
         <span class="material-icons-sharp">donut_small</span>
     </div>
+    <div>
+        Material bell: <span class="material-icons-outlined">notifications</span>
+    </div>
 </body>
 
 </html>
