--- a/Modules/07 - Animations/fun-with-graphics/icons.html
+++ b/Modules/07 - Animations/fun-with-graphics/icons.html
@@ -5,7 +5,7 @@
     <title>Fun with Graphics</title>
     <link rel="stylesheet" href="assets/font-awesome/css/all.css">
     <link rel="stylesheet" href="assets/material-icons/material-icons.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="icons.css">
 </head>
 
 <body>
