--- a/Modules/07 - Animations/advanced-graphics/backgrounds.html
+++ b/Modules/07 - Animations/advanced-graphics/backgrounds.html
@@ -31,7 +31,9 @@
     <div></div>
     <div></div>
     <div></div>
-    <div></div>
+    <div>
+        <span class="material-icons-outlined">notifications</span>
+    </div>
     <div></div>
     <div></div>
     <div></div>
