fixed the gradient animation

--- a/Modules/07 - Animations/advanced-graphics/backgrounds.html
+++ b/Modules/07 - Animations/advanced-graphics/backgrounds.html
@@ -34,7 +34,9 @@
     <div>
         <span class="material-icons-outlined">notifications</span>
     </div>
-    <div></div>
+    <div>
+        <span class="material-icons-outlined">notifications</span>
+    </div>
     <div></div>
     <div></div>
 </body>
