added the vertical more icons

--- a/Modules/07 - Animations/advanced-graphics/icons.html
+++ b/Modules/07 - Animations/advanced-graphics/icons.html
@@ -10,6 +10,7 @@
     <ul>
         <li>Bell: <i class="far fa-bell"></i></li>
         <il>Notifications: <i class="material-icons-outlined">notifications</i> </il>
+        <li>More vertical <i class="material-icons">more_vert</i></li>
     </ul>
 
     <svg class="my-icon" viewBox="0 0 100 100">
